--- a/index.ipynb
+++ b/index.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -79,14 +79,14 @@
        "'January'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "travel_month = \"January\" # \"January\"\n",
-    "travel_month"
+    "travel_month #\"January\""
    ]
   },
   {
